Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,6 @@ stages:
         generateFindingsReport: true
         hasTimeout: false
         hasScanGating: true
-        vulnQuery: 'vulnerability.severity=''HIGH''OR''Medium'''
+        vulnQuery: 'vulnerability.severity = 'MEDIUM''
         publishPipelineArtifacts: true
         artifactPerReport: true
